cdk.out/Jamulus.template.json
{
  "Resources": {
    "ClusterEB0386A7": {
      "Type": "AWS::ECS::Cluster",
      "Metadata": {
        "aws:cdk:path": "Jamulus/Cluster/Resource"
      }
    },
    "ClusterVpcFAA3CEDF": {
      "Type": "AWS::EC2::VPC",
      "Properties": {
        "CidrBlock": "10.0.0.0/16",
        "EnableDnsHostnames": true,
        "EnableDnsSupport": true,
        "InstanceTenancy": "default",
        "Tags": [
          {
            "Key": "Name",
            "Value": "Jamulus/Cluster/Vpc"
          }
        ]
      },
      "Metadata": {
        "aws:cdk:path": "Jamulus/Cluster/Vpc/Resource"
      }
    },
    "ClusterVpcPublicSubnet1SubnetA9F7E0A5": {
      "Type": "AWS::EC2::Subnet",
      "Properties": {
        "CidrBlock": "10.0.0.0/18",
        "VpcId": {
          "Ref": "ClusterVpcFAA3CEDF"
        },
        "AvailabilityZone": {
          "Fn::Select": [
            0,
            {
              "Fn::GetAZs": ""
            }
          ]
        },
        "MapPublicIpOnLaunch": true,
        "Tags": [
          {
            "Key": "aws-cdk:subnet-name",
            "Value": "Public"
          },
          {
            "Key": "aws-cdk:subnet-type",
            "Value": "Public"
          },
          {
            "Key": "Name",
            "Value": "Jamulus/Cluster/Vpc/PublicSubnet1"
          }
        ]
      },
      "Metadata": {
        "aws:cdk:path": "Jamulus/Cluster/Vpc/PublicSubnet1/Subnet"
      }
    },
    "ClusterVpcPublicSubnet1RouteTable5594A636": {
      "Type": "AWS::EC2::RouteTable",
      "Properties": {
        "VpcId": {
          "Ref": "ClusterVpcFAA3CEDF"
        },
        "Tags": [
          {
            "Key": "Name",
            "Value": "Jamulus/Cluster/Vpc/PublicSubnet1"
          }
        ]
      },
      "Metadata": {
        "aws:cdk:path": "Jamulus/Cluster/Vpc/PublicSubnet1/RouteTable"
      }
    },
    "ClusterVpcPublicSubnet1RouteTableAssociation0FBEF1F4": {
      "Type": "AWS::EC2::SubnetRouteTableAssociation",
      "Properties": {
        "RouteTableId": {
          "Ref": "ClusterVpcPublicSubnet1RouteTable5594A636"
        },
        "SubnetId": {
          "Ref": "ClusterVpcPublicSubnet1SubnetA9F7E0A5"
        }
      },
      "Metadata": {
        "aws:cdk:path": "Jamulus/Cluster/Vpc/PublicSubnet1/RouteTableAssociation"
      }
    },
    "ClusterVpcPublicSubnet1DefaultRoute62DA4B4B": {
      "Type": "AWS::EC2::Route",
      "Properties": {
        "RouteTableId": {
          "Ref": "ClusterVpcPublicSubnet1RouteTable5594A636"
        },
        "DestinationCidrBlock": "0.0.0.0/0",
        "GatewayId": {
          "Ref": "ClusterVpcIGW1E358A6E"
        }
      },
      "DependsOn": [
        "ClusterVpcVPCGW47AC17E9"
      ],
      "Metadata": {
        "aws:cdk:path": "Jamulus/Cluster/Vpc/PublicSubnet1/DefaultRoute"
      }
    },
    "ClusterVpcPublicSubnet1EIP433C56EE": {
      "Type": "AWS::EC2::EIP",
      "Properties": {
        "Domain": "vpc",
        "Tags": [
          {
            "Key": "Name",
            "Value": "Jamulus/Cluster/Vpc/PublicSubnet1"
          }
        ]
      },
      "Metadata": {
        "aws:cdk:path": "Jamulus/Cluster/Vpc/PublicSubnet1/EIP"
      }
    },
    "ClusterVpcPublicSubnet1NATGateway0693C346": {
      "Type": "AWS::EC2::NatGateway",
      "Properties": {
        "AllocationId": {
          "Fn::GetAtt": [
            "ClusterVpcPublicSubnet1EIP433C56EE",
            "AllocationId"
          ]
        },
        "SubnetId": {
          "Ref": "ClusterVpcPublicSubnet1SubnetA9F7E0A5"
        },
        "Tags": [
          {
            "Key": "Name",
            "Value": "Jamulus/Cluster/Vpc/PublicSubnet1"
          }
        ]
      },
      "Metadata": {
        "aws:cdk:path": "Jamulus/Cluster/Vpc/PublicSubnet1/NATGateway"
      }
    },
    "ClusterVpcPublicSubnet2Subnet059113C4": {
      "Type": "AWS::EC2::Subnet",
      "Properties": {
        "CidrBlock": "10.0.64.0/18",
        "VpcId": {
          "Ref": "ClusterVpcFAA3CEDF"
        },
        "AvailabilityZone": {
          "Fn::Select": [
            1,
            {
              "Fn::GetAZs": ""
            }
          ]
        },
        "MapPublicIpOnLaunch": true,
        "Tags": [
          {
            "Key": "aws-cdk:subnet-name",
            "Value": "Public"
          },
          {
            "Key": "aws-cdk:subnet-type",
            "Value": "Public"
          },
          {
            "Key": "Name",
            "Value": "Jamulus/Cluster/Vpc/PublicSubnet2"
          }
        ]
      },
      "Metadata": {
        "aws:cdk:path": "Jamulus/Cluster/Vpc/PublicSubnet2/Subnet"
      }
    },
    "ClusterVpcPublicSubnet2RouteTable7B43F18C": {
      "Type": "AWS::EC2::RouteTable",
      "Properties": {
        "VpcId": {
          "Ref": "ClusterVpcFAA3CEDF"
        },
        "Tags": [
          {
            "Key": "Name",
            "Value": "Jamulus/Cluster/Vpc/PublicSubnet2"
          }
        ]
      },
      "Metadata": {
        "aws:cdk:path": "Jamulus/Cluster/Vpc/PublicSubnet2/RouteTable"
      }
    },
    "ClusterVpcPublicSubnet2RouteTableAssociation8446B27D": {
      "Type": "AWS::EC2::SubnetRouteTableAssociation",
      "Properties": {
        "RouteTableId": {
          "Ref": "ClusterVpcPublicSubnet2RouteTable7B43F18C"
        },
        "SubnetId": {
          "Ref": "ClusterVpcPublicSubnet2Subnet059113C4"
        }
      },
      "Metadata": {
        "aws:cdk:path": "Jamulus/Cluster/Vpc/PublicSubnet2/RouteTableAssociation"
      }
    },
    "ClusterVpcPublicSubnet2DefaultRoute97446C8A": {
      "Type": "AWS::EC2::Route",
      "Properties": {
        "RouteTableId": {
          "Ref": "ClusterVpcPublicSubnet2RouteTable7B43F18C"
        },
        "DestinationCidrBlock": "0.0.0.0/0",
        "GatewayId": {
          "Ref": "ClusterVpcIGW1E358A6E"
        }
      },
      "DependsOn": [
        "ClusterVpcVPCGW47AC17E9"
      ],
      "Metadata": {
        "aws:cdk:path": "Jamulus/Cluster/Vpc/PublicSubnet2/DefaultRoute"
      }
    },
    "ClusterVpcPublicSubnet2EIP203DF3E5": {
      "Type": "AWS::EC2::EIP",
      "Properties": {
        "Domain": "vpc",
        "Tags": [
          {
            "Key": "Name",
            "Value": "Jamulus/Cluster/Vpc/PublicSubnet2"
          }
        ]
      },
      "Metadata": {
        "aws:cdk:path": "Jamulus/Cluster/Vpc/PublicSubnet2/EIP"
      }
    },
    "ClusterVpcPublicSubnet2NATGateway00B24686": {
      "Type": "AWS::EC2::NatGateway",
      "Properties": {
        "AllocationId": {
          "Fn::GetAtt": [
            "ClusterVpcPublicSubnet2EIP203DF3E5",
            "AllocationId"
          ]
        },
        "SubnetId": {
          "Ref": "ClusterVpcPublicSubnet2Subnet059113C4"
        },
        "Tags": [
          {
            "Key": "Name",
            "Value": "Jamulus/Cluster/Vpc/PublicSubnet2"
          }
        ]
      },
      "Metadata": {
        "aws:cdk:path": "Jamulus/Cluster/Vpc/PublicSubnet2/NATGateway"
      }
    },
    "ClusterVpcPrivateSubnet1SubnetA4EB481A": {
      "Type": "AWS::EC2::Subnet",
      "Properties": {
        "CidrBlock": "10.0.128.0/18",
        "VpcId": {
          "Ref": "ClusterVpcFAA3CEDF"
        },
        "AvailabilityZone": {
          "Fn::Select": [
            0,
            {
              "Fn::GetAZs": ""
            }
          ]
        },
        "MapPublicIpOnLaunch": false,
        "Tags": [
          {
            "Key": "aws-cdk:subnet-name",
            "Value": "Private"
          },
          {
            "Key": "aws-cdk:subnet-type",
            "Value": "Private"
          },
          {
            "Key": "Name",
            "Value": "Jamulus/Cluster/Vpc/PrivateSubnet1"
          }
        ]
      },
      "Metadata": {
        "aws:cdk:path": "Jamulus/Cluster/Vpc/PrivateSubnet1/Subnet"
      }
    },
    "ClusterVpcPrivateSubnet1RouteTable5AAEDA3F": {
      "Type": "AWS::EC2::RouteTable",
      "Properties": {
        "VpcId": {
          "Ref": "ClusterVpcFAA3CEDF"
        },
        "Tags": [
          {
            "Key": "Name",
            "Value": "Jamulus/Cluster/Vpc/PrivateSubnet1"
          }
        ]
      },
      "Metadata": {
        "aws:cdk:path": "Jamulus/Cluster/Vpc/PrivateSubnet1/RouteTable"
      }
    },
    "ClusterVpcPrivateSubnet1RouteTableAssociation9B8A88D9": {
      "Type": "AWS::EC2::SubnetRouteTableAssociation",
      "Properties": {
        "RouteTableId": {
          "Ref": "ClusterVpcPrivateSubnet1RouteTable5AAEDA3F"
        },
        "SubnetId": {
          "Ref": "ClusterVpcPrivateSubnet1SubnetA4EB481A"
        }
      },
      "Metadata": {
        "aws:cdk:path": "Jamulus/Cluster/Vpc/PrivateSubnet1/RouteTableAssociation"
      }
    },
    "ClusterVpcPrivateSubnet1DefaultRoute3B4D40DD": {
      "Type": "AWS::EC2::Route",
      "Properties": {
        "RouteTableId": {
          "Ref": "ClusterVpcPrivateSubnet1RouteTable5AAEDA3F"
        },
        "DestinationCidrBlock": "0.0.0.0/0",
        "NatGatewayId": {
          "Ref": "ClusterVpcPublicSubnet1NATGateway0693C346"
        }
      },
      "Metadata": {
        "aws:cdk:path": "Jamulus/Cluster/Vpc/PrivateSubnet1/DefaultRoute"
      }
    },
    "ClusterVpcPrivateSubnet2SubnetBD1ECB6E": {
      "Type": "AWS::EC2::Subnet",
      "Properties": {
        "CidrBlock": "10.0.192.0/18",
        "VpcId": {
          "Ref": "ClusterVpcFAA3CEDF"
        },
        "AvailabilityZone": {
          "Fn::Select": [
            1,
            {
              "Fn::GetAZs": ""
            }
          ]
        },
        "MapPublicIpOnLaunch": false,
        "Tags": [
          {
            "Key": "aws-cdk:subnet-name",
            "Value": "Private"
          },
          {
            "Key": "aws-cdk:subnet-type",
            "Value": "Private"
          },
          {
            "Key": "Name",
            "Value": "Jamulus/Cluster/Vpc/PrivateSubnet2"
          }
        ]
      },
      "Metadata": {
        "aws:cdk:path": "Jamulus/Cluster/Vpc/PrivateSubnet2/Subnet"
      }
    },
    "ClusterVpcPrivateSubnet2RouteTable73064A66": {
      "Type": "AWS::EC2::RouteTable",
      "Properties": {
        "VpcId": {
          "Ref": "ClusterVpcFAA3CEDF"
        },
        "Tags": [
          {
            "Key": "Name",
            "Value": "Jamulus/Cluster/Vpc/PrivateSubnet2"
          }
        ]
      },
      "Metadata": {
        "aws:cdk:path": "Jamulus/Cluster/Vpc/PrivateSubnet2/RouteTable"
      }
    },
    "ClusterVpcPrivateSubnet2RouteTableAssociationFB21349E": {
      "Type": "AWS::EC2::SubnetRouteTableAssociation",
      "Properties": {
        "RouteTableId": {
          "Ref": "ClusterVpcPrivateSubnet2RouteTable73064A66"
        },
        "SubnetId": {
          "Ref": "ClusterVpcPrivateSubnet2SubnetBD1ECB6E"
        }
      },
      "Metadata": {
        "aws:cdk:path": "Jamulus/Cluster/Vpc/PrivateSubnet2/RouteTableAssociation"
      }
    },
    "ClusterVpcPrivateSubnet2DefaultRoute011666AF": {
      "Type": "AWS::EC2::Route",
      "Properties": {
        "RouteTableId": {
          "Ref": "ClusterVpcPrivateSubnet2RouteTable73064A66"
        },
        "DestinationCidrBlock": "0.0.0.0/0",
        "NatGatewayId": {
          "Ref": "ClusterVpcPublicSubnet2NATGateway00B24686"
        }
      },
      "Metadata": {
        "aws:cdk:path": "Jamulus/Cluster/Vpc/PrivateSubnet2/DefaultRoute"
      }
    },
    "ClusterVpcIGW1E358A6E": {
      "Type": "AWS::EC2::InternetGateway",
      "Properties": {
        "Tags": [
          {
            "Key": "Name",
            "Value": "Jamulus/Cluster/Vpc"
          }
        ]
      },
      "Metadata": {
        "aws:cdk:path": "Jamulus/Cluster/Vpc/IGW"
      }
    },
    "ClusterVpcVPCGW47AC17E9": {
      "Type": "AWS::EC2::VPCGatewayAttachment",
      "Properties": {
        "VpcId": {
          "Ref": "ClusterVpcFAA3CEDF"
        },
        "InternetGatewayId": {
          "Ref": "ClusterVpcIGW1E358A6E"
        }
      },
      "Metadata": {
        "aws:cdk:path": "Jamulus/Cluster/Vpc/VPCGW"
      }
    },
    "TaskDefinitionTaskRoleFD40A61D": {
      "Type": "AWS::IAM::Role",
      "Properties": {
        "AssumeRolePolicyDocument": {
          "Statement": [
            {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": {
                "Service": "ecs-tasks.amazonaws.com"
              }
            }
          ],
          "Version": "2012-10-17"
        }
      },
      "Metadata": {
        "aws:cdk:path": "Jamulus/TaskDefinition/TaskRole/Resource"
      }
    },
    "TaskDefinitionB36D86D9": {
      "Type": "AWS::ECS::TaskDefinition",
      "Properties": {
        "ContainerDefinitions": [
          {
            "Cpu": 2048,
            "EntryPoint": [
              "Jamulus",
              "--server",
              "--nogui"
            ],
            "Essential": true,
            "Image": "grundic/jamulus",
            "Memory": 4096,
            "Name": "Jamulus"
          }
        ],
        "Cpu": "2048",
        "Family": "JamulusTaskDefinitionD8648795",
        "Memory": "4096",
        "NetworkMode": "awsvpc",
        "RequiresCompatibilities": [
          "EC2",
          "FARGATE"
        ],
        "TaskRoleArn": {
          "Fn::GetAtt": [
            "TaskDefinitionTaskRoleFD40A61D",
            "Arn"
          ]
        }
      },
      "Metadata": {
        "aws:cdk:path": "Jamulus/TaskDefinition/Resource"
      }
    },
    "SecurityGroup580CF996": {
      "Type": "AWS::EC2::SecurityGroup",
      "Properties": {
        "GroupDescription": "Jamulus/Security Group",
        "SecurityGroupEgress": [
          {
            "CidrIp": "0.0.0.0/0",
            "Description": "Allow all outbound traffic by default",
            "IpProtocol": "-1"
          }
        ],
        "SecurityGroupIngress": [
          {
            "CidrIp": "0.0.0.0/0",
            "Description": "from 0.0.0.0/0:UDP 22124",
            "FromPort": 22124,
            "IpProtocol": "udp",
            "ToPort": 22124
          }
        ],
        "VpcId": {
          "Ref": "ClusterVpcFAA3CEDF"
        }
      },
      "Metadata": {
        "aws:cdk:path": "Jamulus/Security Group/Resource"
      }
    },
    "ServiceD69D759B": {
      "Type": "AWS::ECS::Service",
      "Properties": {
        "Cluster": {
          "Ref": "ClusterEB0386A7"
        },
        "DeploymentConfiguration": {
          "MaximumPercent": 200,
          "MinimumHealthyPercent": 50
        },
        "DesiredCount": 1,
        "EnableECSManagedTags": false,
        "LaunchType": "FARGATE",
        "NetworkConfiguration": {
          "AwsvpcConfiguration": {
            "AssignPublicIp": "ENABLED",
            "SecurityGroups": [
              {
                "Fn::GetAtt": [
                  "SecurityGroup580CF996",
                  "GroupId"
                ]
              }
            ],
            "Subnets": [
              {
                "Ref": "ClusterVpcPublicSubnet1SubnetA9F7E0A5"
              },
              {
                "Ref": "ClusterVpcPublicSubnet2Subnet059113C4"
              }
            ]
          }
        },
        "TaskDefinition": {
          "Ref": "TaskDefinitionB36D86D9"
        }
      },
      "Metadata": {
        "aws:cdk:path": "Jamulus/Service/Service"
      }
    },
    "CDKMetadata": {
      "Type": "AWS::CDK::Metadata",
      "Properties": {
        "Modules": "aws-cdk=1.89.0,@aws-cdk/assets=1.89.0,@aws-cdk/aws-applicationautoscaling=1.89.0,@aws-cdk/aws-autoscaling=1.89.0,@aws-cdk/aws-autoscaling-common=1.89.0,@aws-cdk/aws-autoscaling-hooktargets=1.89.0,@aws-cdk/aws-cloudwatch=1.89.0,@aws-cdk/aws-codeguruprofiler=1.89.0,@aws-cdk/aws-ec2=1.89.0,@aws-cdk/aws-ecr=1.89.0,@aws-cdk/aws-ecr-assets=1.89.0,@aws-cdk/aws-ecs=1.89.0,@aws-cdk/aws-elasticloadbalancingv2=1.89.0,@aws-cdk/aws-events=1.89.0,@aws-cdk/aws-iam=1.89.0,@aws-cdk/aws-kms=1. [...]
      },
      "Metadata": {
        "aws:cdk:path": "Jamulus/CDKMetadata/Default"
      },
      "Condition": "CDKMetadataAvailable"
    }
  },
  "Conditions": {
    "CDKMetadataAvailable": {
      "Fn::Or": [
        {
          "Fn::Or": [
            {
              "Fn::Equals": [
                {
                  "Ref": "AWS::Region"
                },
                "ap-east-1"
              ]
            },
            {
              "Fn::Equals": [
                {
                  "Ref": "AWS::Region"
                },
                "ap-northeast-1"
              ]
            },
            {
              "Fn::Equals": [
                {
                  "Ref": "AWS::Region"
                },
                "ap-northeast-2"
              ]
            },
            {
              "Fn::Equals": [
                {
                  "Ref": "AWS::Region"
                },
                "ap-south-1"
              ]
            },
            {
              "Fn::Equals": [
                {
                  "Ref": "AWS::Region"
                },
                "ap-southeast-1"
              ]
            },
            {
              "Fn::Equals": [
                {
                  "Ref": "AWS::Region"
                },
                "ap-southeast-2"
              ]
            },
            {
              "Fn::Equals": [
                {
                  "Ref": "AWS::Region"
                },
                "ca-central-1"
              ]
            },
            {
              "Fn::Equals": [
                {
                  "Ref": "AWS::Region"
                },
                "cn-north-1"
              ]
            },
            {
              "Fn::Equals": [
                {
                  "Ref": "AWS::Region"
                },
                "cn-northwest-1"
              ]
            },
            {
              "Fn::Equals": [
                {
                  "Ref": "AWS::Region"
                },
                "eu-central-1"
              ]
            }
          ]
        },
        {
          "Fn::Or": [
            {
              "Fn::Equals": [
                {
                  "Ref": "AWS::Region"
                },
                "eu-north-1"
              ]
            },
            {
              "Fn::Equals": [
                {
                  "Ref": "AWS::Region"
                },
                "eu-west-1"
              ]
            },
            {
              "Fn::Equals": [
                {
                  "Ref": "AWS::Region"
                },
                "eu-west-2"
              ]
            },
            {
              "Fn::Equals": [
                {
                  "Ref": "AWS::Region"
                },
                "eu-west-3"
              ]
            },
            {
              "Fn::Equals": [
                {
                  "Ref": "AWS::Region"
                },
                "me-south-1"
              ]
            },
            {
              "Fn::Equals": [
                {
                  "Ref": "AWS::Region"
                },
                "sa-east-1"
              ]
            },
            {
              "Fn::Equals": [
                {
                  "Ref": "AWS::Region"
                },
                "us-east-1"
              ]
            },
            {
              "Fn::Equals": [
                {
                  "Ref": "AWS::Region"
                },
                "us-east-2"
              ]
            },
            {
              "Fn::Equals": [
                {
                  "Ref": "AWS::Region"
                },
                "us-west-1"
              ]
            },
            {
              "Fn::Equals": [
                {
                  "Ref": "AWS::Region"
                },
                "us-west-2"
              ]
            }
          ]
        }
      ]
    }
  }
}
